# ridge_regression

./: .gitignore  Makefile  README.md  pyproject.toml
logs/xlsx/: submission.csv
notebooks/: ridge_regression.ipynb
